Fix issue with the "news feed" nav bar title wrapping
I think I accidentally committed the hardcoding of width as part of the
my-nav-bar-table in an earlier commit.  So this commit should contain
that change, as well.

--- a/northxproductions/Content/Site.css
+++ b/northxproductions/Content/Site.css
@@ -35,9 +35,7 @@
 
 /* Nav bar links */
 .my-nav-bar-item-small {
-    padding-left: 5%;
-    padding-right: 5%;
-    margin: auto;
+    padding: 0 40px;
     text-align: center;
     font-size: 1.5em;
 }
